# autofeat_insights

./: .gitignore  LICENSE  Readme.md  main.py  pyproject.toml  run.ipynb  test_graph.py
.github/workflows/: actions.yml
AutogluonModels/models/: learner.pkl  metadata.json
AutogluonModels/models/models/: trainer.pkl
AutogluonModels/models/models/LinearModel/: model.pkl
AutogluonModels/models/models/WeightedEnsemble_L2/: model.pkl
AutogluonModels/models/models/WeightedEnsemble_L2/utils/: oof.pkl
AutogluonModels/models/utils/attr/LinearModel/: y_pred_proba_val.pkl
AutogluonModels/models/utils/data/: X.pkl  X_val.pkl
autofeatinsights/: Autofeat.py  HelperFunctions.py
src/autofeat-insights/: Autofeat.py
