[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofeatinsights"
version = "0.0.1.dev2"
authors = [
  { name="Zeger Mouw", email="zegermouw@gmail.com" },
]
description = "Insights for AutoFeat"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zegermouw/autofeat_insights"
Issues = "https://github.com/zegermouw/autofeat_insights/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autofeatinsights"]